--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@base-ui/react": "^1.1.0",
     "@clerk/nextjs": "^6.36.10",
     "@tabler/icons-react": "^3.36.1",
+    "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
@@ -22,7 +23,8 @@
     "react-dom": "19.2.3",
     "shadcn": "^3.7.0",
     "tailwind-merge": "^3.4.0",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
