--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@base-ui/react": "^1.1.0",
     "@clerk/nextjs": "^6.36.10",
+    "@hookform/resolvers": "^5.2.2",
     "@tabler/icons-react": "^3.36.1",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
@@ -23,6 +24,7 @@
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
     "shadcn": "^3.7.0",
     "tailwind-merge": "^3.4.0",
     "tw-animate-css": "^1.4.0",
